# axum-sqlx-example

./: Cargo.toml  README.md  axum-test.http  db.sql
src/: dbconn.rs  main.rs  model.rs  shortlink.rs
