[package]
name = "axum-sqlx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.3.2"
sqlx = {version = "0.5.9", features = ["mysql",'runtime-tokio-native-tls']}
serde = { version = "1.0", features = ["derive"] }